figures for 70MHz and 200MHz

--- a/ms.tex
+++ b/ms.tex
@@ -587,8 +587,10 @@ The hashed regions indicate the parameter spaces where the radio emission from t
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}[tbhp]
    \plotoneh{radio_1Mp_5AU.pdf}
-   \plotoneh{radio_5Mp_5AU.pdf}
-   \caption{Radio emission from existing M-type red giants with a hypothetical planetary companion of 1$M_J$ and 5$M_J$ at 1 AU and 5AU. Cross symbols indicate that the radio emission is not observable because cyclotron frequency is less than plasma density around the planet. }
+%   \plotoneh{radio_5Mp_5AU.pdf}
+   \plotoneh{radio_2Mp_4-5Gyr.pdf}
+   \plotoneh{radio_4Mp_4-5Gyr.pdf}   
+   \caption{Radio emission from existing M-type red giants with a hypothetical planetary companion of 1$M_J$, 2$M_J$, and 4$M_J$ at 1 AU and 5AU. Cross symbols indicate that the radio emission is not observable because cyclotron frequency is less than plasma density around the planet. }
   \label{fig:observability}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
@@ -610,10 +612,11 @@ v \propto \sqrt{\frac{2GM_\star}{R_{\star }}}
 \end{equation}
 %%%
 Using these values for equations (\ref{eq:stand-off}) and (\ref{eq:stand-off-radius}) as well as the distance to the target, we can estimate the frequency and intensity of radio emission by specifying planetary mass and orbital distance of a hypothetical planetary companion. 
-Here, we consider [A] a Jupiter-twin whose cyclotron frequency is $\sim 30$~MHz, and [B] a larger Jovian planet with $M_p\sim 5M_p$ of 4.5 Gyrs old whose cyclotron frequency is $\sim 300$~MHz (equation (\ref{eq:scalingfc})).  
+Here, we consider [A] a Jupiter-twin whose cyclotron frequency is $\sim 30$~MHz, [B] a larger Jovian planet with $M_p\sim 2M_p$ of 4.5 Gyrs old whose cyclotron frequency is $\sim 70$~MHz, and [C] a larger Jovian planet with $M_p\sim 4M_p$ of 4.5 Gyrs old whose cyclotron frequency is $\sim 200$~MHz
+  (equation (\ref{eq:scalingfc})).  
 
-Figure \ref{fig:observability} displays the estimated radio intensity and the maximum frequency (i.e., cyclotron frequency) of Jupiters [A] and [B] around red giants within 100~pc. 
-Jupiters [A] and [B] are placed at 1 AU and at 5 AU for reference. 
+Figure \ref{fig:observability} displays the estimated radio intensity and the maximum frequency (i.e., cyclotron frequency) of Jupiters [A], [B], and [C]  around red giants within 100~pc. 
+Jupiters are placed at 1 AU and at 5 AU for reference. 
 The difference of the symbols indicates whether the radio emission can escape from the system (circle) or not (cross). 
 
 %\memoYF{Up to where would the planet be engulfed by evolved stars? References?}
