abstract is modified

--- a/ms.tex
+++ b/ms.tex
@@ -130,17 +130,28 @@ yuka.fujii@elsi.jp
 
 
 \begin{abstract}
-  Red-giant hot Jupiters (RGHJs) are jovian planets orbiting red-giant-branch or asymptotic-giant-branch (AGB) stars.
-  Post-main-sequence stars lose mass at much higher rates than main-sequence stars.
-  A jovian planet passing through the dense winds of its RGB or AGB host can capture stellar wind in its magnetosphere, leading to cyclotron emission from electrons spiraling in the magnetic field.
-  The cyclotron frequency of electrons from the stellar wind accreting onto the planet scales as 100~MHz~$(B/30 {\rm~Gauss})$.
-  Counterintuitively, a plausible toy model suggests that a stronger planetary magnetic field leads to lower spectral flux density, and might therefore make objects more challenging to observe.
-  Still, for a range of planetary and stellar parameters, a RGHJ might generate a radio luminosity that would be visible from kiloparsec distances.
+%%%
+Magnetized planets emit radio wave in the interaction with stellar wind. 
+When the host stars evolve off the main sequence and go through red-giant branch (RGB), the stars become orders-of-magnitudes more luminous and at the same time lose mass at much higher rate than their main-sequence counterparts. 
+Accordingly, planetary companions around them, if exist, are heated up to the level of canonical hot Jupiters and also subjected to the massive stellar wind. 
+Such ``Red-Giant Hot Jupiters'' (RGHJs) are therefore candidates of bright radio emitters. 
+We estimate the spectral auroral radio intensity of RGHJs employing the ``radio Bode's law'' and proposed scaling of planetary magnetic fields. 
+We find that RGHJs would be as bright as the predicted radio emission from canonical hot Jupiters, and can be even brighter depending on the configurations. Thus radio emission from a RGHJ might be visible from a hundred parsec distances with current/future detectors \memoYF{check}. 
+
+
+%Red-giant hot Jupiters (RGHJs) are jovian planets orbiting red-giant-branch (RGB) or asymptotic-giant-branch (AGB) stars. 
+%Red-giant hot Jupiters (RGHJs) are jovian planets orbiting red-giant-branch (RGB) or asymptotic-giant-branch (AGB) stars.
+%Post-main-sequence stars lose mass at much higher rates than main-sequence stars.
+%A jovian planet passing through the dense winds of its RGB or AGB host can capture stellar wind in its magnetosphere, leading to radio emission from electrons spiraling in the magnetic field.
+%The cyclotron frequency of electrons from the stellar wind accreting onto the planet scales as 100~MHz~$(B/30 {\rm~Gauss})$.
+%The cyclotron frequency of electrons from the stellar wind accreting onto the planet scales as 100~MHz~$(B/30 {\rm~Gauss})$.
+%Counterintuitively, a plausible toy model suggests that a stronger planetary magnetic field leads to lower spectral flux density, and might therefore make objects more challenging to observe.
+%Still, for a range of planetary and stellar parameters, a RGHJ might generate a radio luminosity that would be visible from kiloparsec distances.
 \end{abstract}
 
 
 \keywords{planets and satellites: Jupiter --- Sun: evolution ---
-  planetary systems --- radiative transfer --- stars: evolution ---
+  planetary systems --- stars: evolution ---
   stars: AGB and post-AGB}
 %]%%% End front material
 
