--- a/ms.tex
+++ b/ms.tex
@@ -135,7 +135,7 @@ yuka.fujii@elsi.jp
 %%%
 Magnetized planets emit radio wave in the interaction with stellar wind. 
 When the host stars evolve off the main sequence and go through red-giant branch (RGB), the stars become orders-of-magnitudes more luminous and at the same time lose mass at much higher rate than their main-sequence counterparts. 
-Accordingly, planetary companions around them, if exist, are heated up to the level of canonical hot Jupiters and also subjected to the massive stellar wind. 
+Accordingly, planetary companions around them at a few AU orbits, if exist, are heated up to the level of canonical hot Jupiters and also subjected to the massive stellar wind. 
 Such ``Red-Giant Hot Jupiters'' (RGHJs) are therefore candidates of bright radio emitters. 
 We estimate the spectral auroral radio intensity of RGHJs employing the ``radio Bode's law'' and proposed scaling of planetary magnetic fields. 
 We find that RGHJs would be as bright as the predicted radio emission from canonical hot Jupiters, and can be even brighter depending on the configurations. Thus radio emission from a RGHJ might be visible from a hundred parsec distances with current/future detectors \memoYF{check}. 
