Text edits in various places

--- a/ms.tex
+++ b/ms.tex
@@ -89,17 +89,17 @@ David S. Spiegel\altaffilmark{1, 2} \\
 %
 {\bf and some order:} \\
 %
-Jason Nordhaus\altaffilmark{3} \\
+Jason Nordhaus\altaffilmark{3,4} \\
 %
-Nikku Madhusudhan\altaffilmark{4} \\
+Nikku Madhusudhan\altaffilmark{5} \\
 %
 Mehrdad Mirbabayi\altaffilmark{1} \\
 %
-Aaron Parsons\altaffilmark{4} \\
+Aaron Parsons\altaffilmark{6} \\
 %
-Tony Mroczkowski\altaffilmark{5,6} \\
+Tony Mroczkowski\altaffilmark{7,8} \\
 %
-Neil Zimmerman\altaffilmark{7}
+Neil Zimmerman\altaffilmark{9}
 }
 
 \affil{$^0$Earth-Life Science Institute, Tokyo Institute of Technology, 
@@ -111,17 +111,19 @@ Neil Zimmerman\altaffilmark{7}
 \affil{$^2$Research \& Development, Sum Labs,
   New York, NY  10001}
 
-\affil{$^2$Department of Mathematics, Rochester Institute of Technology}
+\affil{$^3$Department of Science and Mathematics, National Technical Institute for the Deaf, Rochester Institute of Technology, Rochester, NY 14623}
 
-\affil{$^3$Astronomy Department, University of Cambridge, UK}
+\affil{$^4$Center for Computational Relativity and Gravitation, Department of Mathematics, Rochester Institute of Technology, Rochester, NY 14623}
 
-\affil{$^4$Astronomy Department, University of California Berkeley}
+\affil{$^5$Astronomy Department, University of Cambridge, UK}
 
-\affil{$^5$National Research Council Fellow}
+\affil{$^6$Astronomy Department, University of California Berkeley}
 
-\affil{$^6$Naval Research Laboratory, 4555 Overlook Ave SW, Washington, DC 20375}
+\affil{$^7$National Research Council Fellow}
 
-\affil{$^7$Department of Mechanical and Aerospace Engineering, Princeton University, Princeton, NJ 08544}
+\affil{$^8$Naval Research Laboratory, 4555 Overlook Ave SW, Washington, DC 20375}
+
+\affil{$^9$Department of Mechanical and Aerospace Engineering, Princeton University, Princeton, NJ 08544}
 
 
 \vspace{0.5\baselineskip}
@@ -133,8 +135,8 @@ yuka.fujii@elsi.jp
 
 \begin{abstract}
 %%%
-Magnetized planets emit radio wave in the interaction with stellar wind. 
-When the host stars evolve off the main sequence and go through red-giant branch (RGB), the stars become orders-of-magnitudes more luminous and at the same time lose mass at much higher rate than their main-sequence counterparts. 
+Magnetized planets emit radio waves in the interaction with stellar winds. 
+When the host stars evolve off the main sequence and go through the red-giant branch (RGB), the stars become orders-of-magnitudes more luminous and at the same time lose mass at much higher rates than their main-sequence counterparts. 
 Accordingly, planetary companions around them at a few AU orbits, if exist, are heated up to the level of canonical hot Jupiters and also subjected to the massive stellar wind. 
 Such ``Red-Giant Hot Jupiters'' (RGHJs) are therefore candidates of bright radio emitters. 
 We estimate the spectral auroral radio intensity of RGHJs employing the ``radio Bode's law'' and proposed scaling of planetary magnetic fields. 
@@ -166,11 +168,11 @@ We find that RGHJs would be as bright as the predicted radio emission from canon
 
 Planets with strong magnetic fields may generate radio or X-ray emission when interacting with energetic charged particles. 
 It has been known that Jupiter emits radio emission from the radiation belt and auroral region due to cyclotron-maser instability \citep{zarka1998}.  % due to the acceleration of the plasmas. \memoYF{?}.
-Potentially, exoplanets can also emit radio waves through the similar mechanisms, depending on their intrinsic magnetic fields and the density of surrounding plasmas, e.g. stellar wind particles and particles from Io-like moons. 
+Potentially, exoplanets can also emit radio waves through similar mechanisms, depending on their intrinsic magnetic fields and the density of the surrounding plasma, e.g. stellar wind particles and particles from Io-like moons. 
 Observations of radio emission from Solar System planets imply an empirical relation that the radio intensity is proportional to the input solar wind flux going into each planetary magnetosphere, which is known as  ``radiometric Bode's law'' \citep{desch+kaiser1984}. 
-Based on this law, exoplanets in close-in orbits have been attracted attention as possible bright radio wave emitters because they are subjected to strong stellar wind and/or strong interstellar magnetic field, and thus can gain larger energy input. Motivated by such speculations, spectral radio intensity from known exoplanets have been estimated  \citep{farrell1999,zarka2001,Lazio2004,griesmeier2004,griesmeier2007a,griesmeier2007b,reiners2010}. 
+Based on this law, exoplanets in close-in orbits have attracted attention as possible bright radio wave emitters because they are subjected to strong stellar winds and/or strong interstellar magnetic fields, and thus can gain larger energy input. Motivated by such speculations, spectral radio intensity from known exoplanets have been estimated  \citep{farrell1999,zarka2001,Lazio2004,griesmeier2004,griesmeier2007a,griesmeier2007b,reiners2010}. 
 In addition, young planetary systems where the stellar wind activity is stronger are also taken into consideration \citep{griesmeier2005}. 
-Although the observational search for these radio signatures are being conducted, there is no clear detection claimed so far
+Although the observational search for these radio signatures are underway, there is no clear detection claimed so far
 \citep{bastian2000,george2007,stroe2012,hallinan2013,murphy2015}, 
 while some indications have been obtained \citep{lecavelier_et_al2013,sirothia2014}. 
 
@@ -178,7 +180,7 @@ When stars less than $\sim$8~$M_\sun$ evolve off the main sequence,
 they go through stages on the red-giant branch (RGB) and the
 asymptotic-giant branch (AGB) where their radii and luminosities increase by orders of magnitude. 
 Jovian planets in orbit around such stars can be transiently heated to hot-Jupiter temperatures ($\sim$1000~K or more) at distances out to tens of AU, depending on the star's mass \citep{spiegel+madhusudhan2012}. 
-At the same time, they are subject to massive (but slow) stellar wind, as the mass-loss rate of such evolved stars are significantly higher than the main-sequence counterparts, ranging from $\sim  10^{-8} M_\odot$/yr to $\sim  10^{-5} M_\odot$/yr with the highest values for AGB stars \citep[e.g.,][]{reimers1975, schild1989, vassiliadis1993, schoier2001, vanloon2005}, significantly larger than solar mass-loss rate $\sim 10^{-14}M_\odot$/yr. 
+At the same time, they are subject to a massive (but slow) stellar wind, as the mass-loss rate of such evolved stars are significantly higher than the main-sequence counterparts, ranging from $\sim  10^{-8} M_\odot$/yr to $\sim  10^{-5} M_\odot$/yr with the highest values for AGB stars \citep[e.g.,][]{reimers1975, schild1989, vassiliadis1993, schoier2001, vanloon2005}, significantly larger than solar mass-loss rate $\sim 10^{-14}M_\odot$/yr. 
 On the assumption that the radio emission is correlated with the stellar wind, planetary companions around evolved stars could also generate bright radio emission. 
 
 In this paper we estimate the potential to detect planetary companions around evolved stars through the brightness of their radio emission. 
@@ -229,7 +231,7 @@ Therefore, we have
 
 On the other hand, the stellar wind velocity becomes smaller because of the small escape velocity (due to expanded stellar radius).
 %\footnote{Escape velocity is $\sqrt{2GM/r}$.}
-Assuming that the stellar wind scales as the escape velocity, i.e., $\propto \sqrt{2GM_p/R}$ ($G$ is the gravitational constant, $M_p$ is the planetary mass, and $R$ is the planetary radius), a RG with radius $R=100R_{\odot}$ has 10 times as slow stellar wind as that at the main sequence. 
+Assuming that the stellar wind scales as the escape velocity, i.e., $\propto \sqrt{2GM_p/R}$ ($G$ is the gravitational constant, $M_p$ is the planetary mass, and $R$ is the planetary radius), a RG with radius $R=100R_{\odot}$ encounters 10 times as slow a stellar wind as that at the main sequence. 
 %\memoYF{Estimate in more detail?} 
 Thus, 
 \begin{equation}
