scaling of B is slightly updated. Now it is not based on Christensen+ 2006 but Christensen+ 2009

--- a/biblio.bib
+++ b/biblio.bib
@@ -2,12 +2,27 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Yuka Fujii at 2015-06-02 22:53:17 +0900 
+%% Created for Yuka Fujii at 2015-06-21 16:18:59 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{christensen2009,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2009Natur.457..167C},
+	Author = {{Christensen}, U.~R. and {Holzwarth}, V. and {Reiners}, A.},
+	Date-Added = {2015-06-21 20:18:50 +0000},
+	Date-Modified = {2015-06-21 20:18:59 +0000},
+	Doi = {10.1038/nature07626},
+	Journal = {\nat},
+	Month = jan,
+	Pages = {167-169},
+	Title = {{Energy flux determines magnetic field strength of planets and stars}},
+	Volume = 457,
+	Year = 2009,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1038/nature07626}}
 
 @article{murphy2015,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
