--- a/ms.tex
+++ b/ms.tex
@@ -137,9 +137,8 @@ Magnetized planets emit radio wave in the interaction with stellar wind.
 When the host stars evolve off the main sequence and go through red-giant branch (RGB), the stars become orders-of-magnitudes more luminous and at the same time lose mass at much higher rate than their main-sequence counterparts. 
 Accordingly, planetary companions around them at a few AU orbits, if exist, are heated up to the level of canonical hot Jupiters and also subjected to the massive stellar wind. 
 Such ``Red-Giant Hot Jupiters'' (RGHJs) are therefore candidates of bright radio emitters. 
-We estimate the spectral auroral radio intensity of RGHJs employing the ``radio Bode's law'' and proposed scaling of planetary magnetic fields. 
-We find that RGHJs would be as bright as the predicted radio emission from canonical hot Jupiters, and can be even brighter depending on the configurations. Thus radio emission from a RGHJ might be visible from a hundred parsec distances with current/future detectors \memoYF{check}. 
-
+We estimate the spectral auroral radio intensity of RGHJs employing the ``radiometric Bode's law'' and proposed scaling of planetary magnetic fields. 
+We find that RGHJs might be as bright as canonical hot Jupiters as predicted so far, and thus radio emission from a RGHJ would be visible from a hundred parsec distances with current/future detectors \memoYF{check}. 
 
 %Red-giant hot Jupiters (RGHJs) are jovian planets orbiting red-giant-branch (RGB) or asymptotic-giant-branch (AGB) stars. 
 %Red-giant hot Jupiters (RGHJs) are jovian planets orbiting red-giant-branch (RGB) or asymptotic-giant-branch (AGB) stars.
@@ -165,10 +164,10 @@ We find that RGHJs would be as bright as the predicted radio emission from canon
 
 
 Planets with strong magnetic fields may generate radio or X-ray emission when interacting with energetic charged particles. 
-It has been known that Jupiter emits radio emission from the radiation belt and auroral region due to cyclotron-maser instability \citep{zarka1998}.  % due to the acceleration of the plasmas. \memoYF{?}.
+It has been known that Jupiter emits radio emission from the auroral region due to cyclotron-maser instability \citep{zarka1998}.  % due to the acceleration of the plasmas. \memoYF{?}.
 Potentially, exoplanets can also emit radio waves through the similar mechanisms, depending on their intrinsic magnetic fields and the density of surrounding plasmas, e.g. stellar wind particles and particles from Io-like moons. 
 Observations of radio emission from Solar System planets imply an empirical relation that the radio intensity is proportional to the input solar wind flux going into each planetary magnetosphere, which is known as  ``radiometric Bode's law'' \citep{desch+kaiser1984}. 
-Based on this law, exoplanets in close-in orbits have been attracted attention as possible bright radio wave emitters because they are subjected to strong stellar wind and/or strong interstellar magnetic field, and thus can gain larger energy input. Motivated by such speculations, spectral radio intensity from known exoplanets have been estimated  \citep{farrell1999,zarka2001,Lazio2004,griesmeier2004,griesmeier2007a,griesmeier2007b,reiners2010}. 
+Based on this law, it has been proposed that exoplanets in close-in orbits may be bright radio wave emitters because they are subjected to strong stellar wind and/or strong interstellar magnetic field, and thus can gain larger energy input. Motivated by such speculations, spectral radio intensity from known exoplanets have been estimated  \citep{farrell1999,zarka2001,Lazio2004,griesmeier2004,griesmeier2007a,griesmeier2007b,reiners2010}. 
 In addition, young planetary systems where the stellar wind activity is stronger are also taken into consideration \citep{griesmeier2005}. 
 Although the observational search for these radio signatures are being conducted, there is no clear detection claimed so far
 \citep{bastian2000,george2007,stroe2012,hallinan2013,murphy2015}, 
@@ -177,11 +176,11 @@ while some indications have been obtained \citep{lecavelier_et_al2013,sirothia20
 When stars less than $\sim$8~$M_\sun$ evolve off the main sequence,
 they go through stages on the red-giant branch (RGB) and the
 asymptotic-giant branch (AGB) where their radii and luminosities increase by orders of magnitude. 
-Jovian planets in orbit around such stars can be transiently heated to hot-Jupiter temperatures ($\sim$1000~K or more) at distances out to tens of AU, depending on the star's mass \citep{spiegel+madhusudhan2012}. 
+Jovian planets in orbit around such stars can be transiently heated to hot-Jupiter temperatures ($\sim$1000~K or more) at distances out to tens of AU, depending on the star's mass; such planets are termed ``Red Giant Hot Jupiters'' (RGHJs) \citep{spiegel+madhusudhan2012}. 
 At the same time, they are subject to massive (but slow) stellar wind, as the mass-loss rate of such evolved stars are significantly higher than the main-sequence counterparts, ranging from $\sim  10^{-8} M_\odot$/yr to $\sim  10^{-5} M_\odot$/yr with the highest values for AGB stars \citep[e.g.,][]{reimers1975, schild1989, vassiliadis1993, schoier2001, vanloon2005}, significantly larger than solar mass-loss rate $\sim 10^{-14}M_\odot$/yr. 
 On the assumption that the radio emission is correlated with the stellar wind, planetary companions around evolved stars could also generate bright radio emission. 
 
-In this paper we estimate the potential to detect planetary companions around evolved stars through the brightness of their radio emission. 
+In this paper, we estimate the potential to detect planetary companions around evolved stars through the brightness of their radio emission. 
 In \S2, we describe our assumptions for the scaling of planetary radio emission, stellar wind, and planetary magnetosphere.
 \S3 presents a simple estimate of the spectral radio intensity of RGHJs and compares them with what might be expected from canonical hot Jupiters.
 %\S3 also describes the surprising result that, although the planetary magnetic field is crucial to the generation of radio emission at all, there might be an important region in parameter space in which planets with stronger magnetic fields are less easily observable. 
@@ -219,7 +218,7 @@ n = \frac{\dot M_\star}{4\pi a^2 m_p v}
 %%%%%%%%%% 
 where $\dot M_\star$ is the stellar mass loss rate, $a$ is the orbital distance from the star and $m_p$ is proton mass, and $v$ is the velocity of the stellar wind. 
 
-While the solar mass loss rate, $\dot M_\odot$, is $\dot M_\odot \sim 2\times 10^{-14} M_{\odot}$/yr \citep[e.g.,][]{hundhausen1997}, the mass loss rate of red giants is typically $\dot M_\star \sim 10^{-8}-10^{-7} M_{\odot}$/yr, ant the rate can be as high as $10^{-5} M_\odot{\rm /yr}$ during the AGB phase. 
+While the solar mass loss rate, $\dot M_\odot$, is $\dot M_\odot \sim 2\times 10^{-14} M_{\odot}$/yr \citep[e.g.,][]{hundhausen1997}, the mass loss rate of red giants is typically $\dot M_\star \sim 10^{-8}-10^{-7} M_{\odot}$/yr, and the rate can be as high as $10^{-5} M_\odot{\rm /yr}$ during the AGB phase. 
 Therefore, we have
 %%%%%%%%%% 
 \begin{equation}
@@ -229,7 +228,7 @@ Therefore, we have
 
 On the other hand, the stellar wind velocity becomes smaller because of the small escape velocity (due to expanded stellar radius).
 %\footnote{Escape velocity is $\sqrt{2GM/r}$.}
-Assuming that the stellar wind scales as the escape velocity, i.e., $\propto \sqrt{2GM_p/R}$ ($G$ is the gravitational constant, $M_p$ is the planetary mass, and $R$ is the planetary radius), a RG with radius $R=100R_{\odot}$ has 10 times as slow stellar wind as that at the main sequence. 
+Assuming that the stellar wind scales as the escape velocity, i.e., $\propto \sqrt{2GM_{\star}/R_{\star}}$ ($G$ is the gravitational constant, $M_{\star}$ is the stellar mass, and $R_{\star}$ is the stellar radius), a RG with radius $R_{\star}=100R_{\odot}$ has 10 times as slow stellar wind as that at the main sequence. 
 %\memoYF{Estimate in more detail?} 
 Thus, 
 \begin{equation}
@@ -250,20 +249,30 @@ where $v_{\odot} \sim 4.0 \times 10^2 $ km/sec.
 
 In order to estimate the planetary magnetic field of general planets, we adopt a simple scaling relation between the magnetic field and macroscopic planetary properties. 
 
-Several relationships have been proposed so far \citep[e.g.][]{russel1978,busse1976,stevenson1979,mizutani1992,sano1993,starchenko2002,christensen2006} %\memoYF{check!}
-(see \citet{griesmeier2004} or \citet{christensen2010} for the summary), which are compared with numerical simulations in \citet{christensen2010}. 
-We employ the following relationship from \citet{christensen2006}, which is based on the assumption that the ohmic dissipation energy is a fraction of available convected energy and was found to be in a good agreement with the numerical experiments over a wide parameter space: 
+Several relationships have been proposed so far \citep[e.g.][]{russel1978,busse1976,stevenson1979,mizutani1992,sano1993,starchenko2002,christensen2006,christensen_et_al2009} %\memoYF{check!}
+%(see \citet{griesmeier2004} or \citet{christensen2010} for the summary), 
+which are compared with numerical simulations in \citet{christensen2010}. 
+We employ the relationship proposed in \citet{christensen_et_al2009}, which is based on the assumption that the ohmic dissipation energy is a fraction of available convected energy and was found to be in a good agreement with the numerical experiments over a wide parameter space: 
 %\memoYF{describe in more detail}:
 %%%%%%%%%% 
+%\begin{equation}
+%B^2 \propto \rho_c r_c^{4/3} q_c^{2/3}, \label{eq:Bscaling} 
+%\end{equation}
 \begin{equation}
-B^2 \propto \rho_c r_c^{4/3} q_c^{2/3}, \label{eq:Bscaling} 
+\langle B_c \rangle ^2 \propto f_{\rm ohm} \langle \rho_c \rangle ^{1/3} (Fq_o)^{2/3} \label{eq:Bscaling} 
 \end{equation}
 %%%%%%%%%%
-where $\rho _c$ and $r_c$ are the density and the radius of the dynamo region, and $q_c$ is the internal convected energy flux in the core region. 
-Magnetic field of planets are estimated by scaling Jovian magnetic field $B_J \sim 10$~G by equation (\ref{eq:Bscaling}). 
-\memoYF{need to cite \citet{reiners2010} somewhere.}
+%where $\rho _c$ and $r_c$ are the density and the radius of the dynamo region, and $q_c$ is the internal convected energy flux in the core region. 
+where $\langle B_c \rangle$ is the mean magnetic field in the dynamo region, $f_{\rm ohm}$ is the ratio of ohmic dissipation to the total dissipation, $\langle \rho_c \rangle$ is the mean density in the dynamo region, $F$ is the efficiency factor of order unity, and $q_o$ is the convected flux at the outer boundary of the dynamo region \citep[see][for the comprehensive description]{christensen_et_al2009}. 
+Dipole magnetic field strength at the planetary surface, denoted by $B$, is then scaled by
+%%%%%%%%%%
+\begin{equation}
+B \propto B_c \left( \frac{r_c}{R_p} \right)^3 \label{eq:Bscaling2}
+\end{equation}
+%%%%%%%%%%
+Magnetic field of planets are estimated by scaling Jovian magnetic field $B_J \sim 10$~G with equations (\ref{eq:Bscaling}) and (\ref{eq:Bscaling2}) assuming that $f_{\rm ohm}$ and $F$ are roughly constant. 
 
-In order to evaluate $\rho _c $ and $r_c$, we need a model of internal structure of planets. 
+In order to evaluate $\rho _c $ and $q_o$, we need a model of internal structure of planets. 
 In this paper, we consider Jupiter-like gaseous planets and assume that the planetary radius is constant at $R_p = R_{p,J}$, because the numerical calculations show that the radii of gaseous planets over the range of $0.1 M_{p, J} < M_p < 10M_{p, J}$ (with core mass less than 10\%) are converged to $0.8 R_{p, J} < R_p < 1.2R_{p, J}$ within 1 Gyr \citep{fortney2007}. 
 For the density profile, we assume a polytrope gas sphere with index $n=1$, which results in:
 %%%%%%%%%% 
@@ -274,21 +283,26 @@ For the density profile, we assume a polytrope gas sphere with index $n=1$, whic
 We determine the core radius $r_c$ by assuming that the hydrogen becomes metallic when $\rho (r)$ exceeds the critical density $\rho_{\rm crit}=0.7\,\mbox{g/cm}^3$ \citep{exoplanets2006, griesmeier2007b}. The density of the metallic core, $\rho _c$ is obtained by averaging the density in the core. 
 In the case of Jupiter, $r_{c,\,J} = 0.85 R_{\rm J}$.  
 
-The scaling of convected heat flux, $q_c$, is obtained by dividing the time-dependent net planetary luminosity by the surface area of the core region i.e., $4\pi r_c^2$. 
+The scaling of convected heat flux at the outer boundary, $q_o$, is obtained by dividing the time-dependent net planetary luminosity by the surface area of the core region, i.e., $4\pi r_c^2$. 
 The model of luminosity evolution is taken from \citet{burrows_et_al2001} \citep[see also][]{marley2007}, which resulted in:
 %%%%%%%%%%
 \begin{equation}
-L \sim 1.4^{-9} L_\odot \left( \frac{t}{4.5 \rm~Gyr} \right)^{-1.3} \left( \frac{M_p}{M_J} \right)^{2.64} \, 	
+L \sim 1.4\times 10^{-9} L_\odot \left( \frac{t}{4.5 \rm~Gyr} \right)^{-1.3} \left( \frac{M_p}{M_J} \right)^{2.64} \, 	
 \label{eq:burrowsLum}
 \end{equation}
 %%%%%%%%%%
 Therefore, we have
 %%%%%%%%%%
 \begin{equation}
-q_c \sim q_{c, J} \left( \frac{t}{4.5 \rm~Gyr} \right)^{-1.3} \left( \frac{M_p}{M_J} \right)^{2.64} \left( \frac{r_c}{r_{c,\,J}} \right)^{-2}\, .
+q_o \sim q_{o, J} \left( \frac{t}{4.5 \rm~Gyr} \right)^{-1.3} \left( \frac{M_p}{M_J} \right)^{2.64} \left( \frac{r_c}{r_{c,\,J}} \right)^{-2}\, .
 \label{eq:burrowsHeatFlux}
 \end{equation}
 %%%%%%%%%%
+
+We note that the scaling relation based on \citet{christensen_et_al2009}, or equation (\ref{eq:Bscaling}), has also been adopted in \citet{reiners2010}. While the detailed treatment of $\rho _c$ and $q_o$ are different, two estimates of planetary magnetic field strength are fairly close, as shown in \S3 below. 
+
+
+
 %We estimate the convected heat flux by dividing this luminosity by the surface area of the core region, i.e., $4 \pi r_c^2$. 
 
 %\memoYF{I am not sure if the following paragraph is needed.}
@@ -315,7 +329,7 @@ q_c \sim q_{c, J} \left( \frac{t}{4.5 \rm~Gyr} \right)^{-1.3} \left( \frac{M_p}{
 \label{ss:model_frequency}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-The peak of the auroral radio emission is around the cyclotron frequency of the planetary magnetic field, $f_{\rm cyc}$: 
+Planetary auroral radio wave are emitted at the local cyclotron frequency along the motion of the plasmas. The upper limit is around the cyclotron frequency of the planetary surface magnetic field, $f_{\rm cyc}$: 
 %%%%%%%%%% 
 \begin{equation}
 f_{\rm cyc} = \frac{eB}{2\pi m_e} \approx 27.9 {\rm~MHz} \left( \frac{B}{10 \rm~G} \right) \label{eq:fcyc}
@@ -387,7 +401,7 @@ The radius of the magnetic stand-off point, $r_s$, is obtained based on the bala
 m_p n v ^2 \sim \frac{B^2}{8\pi}\left( \frac{r_s}{R_p} \right)^{-6}  \label{eq:stand-off}
 \end{equation}
 %%%
-The radius obtained for Jupiter from this equality is about a half of actual radius of Magnetosphere \citep[][]{griesmeier2005}. We estimate $r_s$ simply by scaling Jovian magnetosphere \citep[$r_{s,\,J} \sim 84 R_J$][]{joy2002} according to equation (\ref{eq:stand-off}), i.e., 
+The radius obtained for Jupiter from this equality is about a half of actual radius of Magnetosphere \citep[][]{griesmeier2005}. We estimate $r_s$ simply by scaling Jovian magnetosphere \citep[$r_{s,\,J} \sim 84 R_J$;][]{joy2002} according to equation (\ref{eq:stand-off}), i.e., 
 %%%
 \begin{eqnarray}
 r_s 
@@ -421,7 +435,7 @@ The bandwidth, $\Delta f$, is assumed to be proportional to the representative f
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%s
 
 First, we estimate the strength of planetary magnetic field based on the scaling relation of equation (\ref{eq:Bscaling}) and assumptions described in \S\ref{ss:magneticfield}. 
-Figure \ref{fig:planetaryB} shows the estimated core radius ($r_c$), core density ($\rho_c$), and convected heat flux ($q_c$) as well as the predicted magnetic field strength at planetary surface ($B$) and the corresponding cyclotron frequency ($f_{\rm cyc}$), as functions of planetary mass and the age. 
+Figure \ref{fig:planetaryB} shows the estimated core radius ($r_c$), core density ($\rho_c$), and convected heat flux ($q_o$) as well as the predicted magnetic field strength at planetary surface ($B$) and the corresponding cyclotron frequency ($f_{\rm cyc}$), as functions of planetary mass and the age. 
 Because $\rho _c \propto M_p$  at large $M_p$ and $q_c \propto t^{-1.3} M_p^{2.64}/r_c^2$, the magnetic field is roughly:
 %%%%%%%%%% 
 \begin{eqnarray}
@@ -542,7 +556,7 @@ We can see emission only from where the cyclotron frequency (Eq.~\ref{eq:fcyc}) 
 \label{eq:fcyc>fplasma} f_{\rm cyc} > f_{\rm plasma}^{\rm los}
 \end{equation} 
 %%%
-or, \memoDS{Is this arithmetic right?  Shouldn't the 2.2 actually be 0.5, based on the 14.7MHz in eq. 12 and the 27.9MHz in eq. 8?}\memoYF{Corrected. }
+or, 
 %%%
 \begin{eqnarray}
  \left( \frac{B}{10~\mbox{G}} \right) &>& 0.526 \left( \frac{a}{5~\mbox{AU}} \right)^{-1} \\
