--- a/ms.tex
+++ b/ms.tex
@@ -22,6 +22,9 @@
 
 \def\memoDS#1{\color{blue}$[${\bf #1}$]$ \color{black}}
 
+\definecolor{DarkGreen}{rgb}{0.0, 0.6, 0.0}
+\def\memoTM#1{\color{DarkGreen}$[${\bf #1}$]$ \color{black}}
+
 \def\plotonesc#1{\centering \leavevmode
 \includegraphics[clip=, width=1.70\columnwidth]{#1}}
 \def\plotoneh#1{\centering \leavevmode
@@ -210,7 +213,7 @@ Then, we discuss the framework to estimate the frequency and intensity of planet
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 One important factor in modeling the radio emission due to the interaction between stellar wind and the planetary magnetic field is the density and velocity of stellar wind. 
-The number density of stellar wind, $n$, can be expressed as
+The number density of \memoTM{electrons in the (?)} stellar wind, $n$, can be expressed as
 %%%%%%%%%% 
 \begin{equation}
 n = \frac{\dot M_\star}{4\pi a^2 m_p v}
@@ -389,6 +392,7 @@ P_{\rm radio} &\propto & P_{\rm inp} \\
 P_{\rm inp,\,k} &=& n v^3 r_s ^2 \label{eq:Pinp_kin}, \\
 P_{\rm inp,\,m} &=& v B_{\bot }^2 r_s ^2 \label{eq:Pinp_mag},
 \end{eqnarray}
+\memoTM{Somekind of plot of the typical ranges of these quantities might be useful/illustrative.}
 %%%
 where $ B_{\bot }$ is the interstellar magnetic field perpendicular to the stellar wind flow, and $r_s$ is the radius of the magnetic stand-off point. 
 %In the case of the Solar wind, the kinetic energy is dominant input energy over the magnetic one (the former is $\sim 400$ times larger than the latter).  
@@ -398,7 +402,7 @@ In this paper, we assume that the radio emission is scaled with the input kineti
 On the other hand, in the case that the correlation with input magnetic energy is fundamental, it is difficult to estimate the planetary radio emission at this point because magnetic field of evolved stars are not well constrained for highly evolved stars; most of observations only set an upper limit \citep[e.g.,][]{konstantinova2010,petit2013,tsvetkova2013,konstantinova2013,auriere2015}. 
 In the case of M-type giant EK boo, surface magnetic field $\sim 0.1-10 $G has been measured; In this particular case, given the large stellar radius $R_\star \sim 210 R_{\odot }$ the magnetic moment may be about $10^3$ times larger than the Sun and thus also may also increase the planetary radio emission. However, because of the lack of universal understanding of the stellar magnetic field, we leave the magnetic model of radio emission for evolved stars for future work. 
 
-In reality, the total power of Jovian auroral emission highly varies in time: $1.3\times 10^{10}$ W for the average, $3.2\times 10^{10}$ W for the average of highly active time, and $4.5 \times 10^{11}$ W for the peak activity \citep{zarka_et_al2004}. 
+In reality, the total power of Jovian auroral emission varies greatly over time: $1.3\times 10^{10}$ W for the average, $3.2\times 10^{10}$ W for the average of highly active time, and $4.5 \times 10^{11}$ W for the peak activity \citep{zarka_et_al2004}. 
 Here we employ $P_{\rm radio,\,J}=2.1\times 10^{11}\mbox{~W}$ as a canonical value, following \citet{griesmeier2005,griesmeier2007b}.
 \memoYF{reconsidering...}
 
@@ -661,6 +665,47 @@ The difference of the symbols indicates whether the radio emission can escape fr
 
 \memoYF{discussion about detectability... Figures 1-3 of \citet{griesmeier2007b} show $10^{-3}$ Jy limit for 10-100 MHz (LWA, LOFAR) and $10^{-5}-10^{-4}$ Jy for 100-1000 MHz (LOFAR, SKA). }
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{table}[htdp]
+\caption{Detectability of Hot Jupiters with Current and Future Radio Telescopes.}
+\begin{center}
+\begin{tabular}{c|ccc} \hline \hline\\[-0.5pc]
+Instrument & Band & Sensitivity & Time  \\[.25pc]
+ &  & $\mu$Jy~hr$^{1/2}$ &  hr \\[0.25pc] 
+\hline\\[-0.5pc]
+GMRT & 220~MHz &  \\
+HERA  & 70~MHz  &  &  \\
+LOFAR  & 120~MHz  &  &  \\
+LWA  & 70~MHz  &  &  \\
+SKA  & 200~MHz  &  &  \\
+UTR-2 & & & \\
+VLA  & P-band (270-430~MHz)  \\ \hline
+\end{tabular}
+\end{center}
+\label{tab:sens}
+\tablecomments{Time estimates to reach 10~$\mu$Jy RMS.  We consider only
+telescopes that can reach this in less than XX hours without
+being confusion limited.}
+\end{table}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\begin{deluxetable}{l|lll}
+%\tablecolumns{4}
+%\tablewidth{0pt}
+%\tabletypesize{\scriptsize}
+%\tablecaption{Detectability of Hot Jupiters with Current and Future Radio Telescopes}
+%\tablehead{ Instrument & Band & Sensitivity & Time  \\ 
+% &  & $\mu$Jy~hr$^{1/2}$ &  hr} 
+%\startdata 
+%GMRT & 220~MHz   &  & \\
+%SKA  & 200~MHz)  &  &  \\
+%VLA  & P-band (270-430~MHz)  &  & 
+%\enddata
+%\tablecomments{Time estimates to reach 10~$\mu$Jy RMS.  We consider only
+%telescopes that can reach this in less than XX hours without
+%being confusion limited.}
+%\label{tab:sens}
+%\end{deluxetable}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
