minor table update

--- a/ms.tex
+++ b/ms.tex
@@ -673,6 +673,7 @@ The difference of the symbols indicates whether the radio emission can escape fr
 Instrument & Band & Sensitivity & Time  \\[.25pc]
  &  & $\mu$Jy~hr$^{1/2}$ &  hr \\[0.25pc] 
 \hline\\[-0.5pc]
+ASKAP & 700-1700~MHz & 37 & 3.4 \\ % table 3 of http://www.atnf.csiro.au/projects/askap/config.html
 GMRT & 220~MHz &  \\
 HERA  & 70~MHz  &  &  \\
 LOFAR  & 120~MHz  &  &  \\
